/*
MIT License
Copyright (c) 2019 Michele Maione
Permission is hereby granted, free of charge, toE any person obtaining a copy of this software and associated documentation files (the "Software"), toE deal in the Software without restriction, including without limitation the rights toE use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and toE permit persons toE whom the Software is furnished toE do so, subject toE the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/
syntax = "proto3";

package OhmOMatic.ProtoBuffer;

import "Common.proto";
import "Home.proto";


service StatService {
    rpc aggiungiStatisticaLocale (statisticheCasa) returns (standardRes);
    rpc aggiungiStatisticaGlobale (statisticheCondominio) returns (standardRes);

    rpc ultimeStatisticheCasa (getStatisticheCasa) returns (statisticheRes);
    rpc ultimeStatisticheCondominio (getStatisticheCondominio) returns (statisticheRes);

    rpc deviazioneStandardMediaCasa (getStatisticheCasa) returns (deviazioneStandardMediaRes);
    rpc deviazioneStandardMediaCondominio (getStatisticheCondominio) returns (deviazioneStandardMediaRes);
}

//region Request
message statistica {
    int64 data = 1;
    double valore = 2;
}

message getStatisticheCasa {
    casa Casa = 1;
    int32 N = 2;
}

message getStatisticheCondominio {
    int32 N = 1;
}

message statisticheCasa {
    casa Casa = 1;
    statistica Statistiche = 2;
}

message statisticheCondominio {
    repeated statistica Statistiche = 1;
}

message deviazioneStandardMedia {
    double deviazioneStandard = 1;
    double media = 2;
}
//endregion

//region Reponse
message deviazioneStandardMediaRes {
    standardRes StandardRes = 1;
    deviazioneStandardMedia Statistiche = 2;
}

message statisticheRes {
    standardRes StandardRes = 1;
    repeated statistica Statistiche = 2;
}
//endregion